# workshop-azure-openai

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  enhancement.md
.github/workflows/: docker-release.yaml  docker.yaml  ghcr.yaml  github-pages.yaml  test.yaml
README.dev/: index.html
apps/10_streamlit_batch_transcription/: README.md  index.html  main.py
apps/11_promptflow/: .gitignore  README.md  connection_azure_openai.yaml  index.html
apps/11_promptflow/chat-math-variant/: README.md  chat_variant_1.jinja2  extract_result.py  flow.dag.yaml
apps/11_promptflow/chat_minimal/: chat.prompty  main.py
apps/11_promptflow/eval-chat-math/: README.md  aggregate.py  flow.dag.yaml  line_process.py
apps/11_promptflow/evaluators/: data.jsonl  main.py
apps/11_promptflow/flex_flow_langchain/: data.jsonl  flow.flex.yaml  main.py
apps/11_promptflow/image_qa/: data.jsonl  flow.dag.yaml  hello.py
apps/11_promptflow/image_qa/.promptflow/: flow.tools.json
apps/11_promptflow/playground/: data.jsonl  flow.dag.yaml
apps/11_promptflow/playground_chat/: flow.dag.yaml
apps/11_promptflow/playground_evaluation/: aggregate.py
apps/11_promptflow/playground_evaluation/.promptflow/: flow.tools.json
apps/11_promptflow/playground_standard/.promptflow/: flow.tools.json
apps/12_langgraph_agent/: README.md  index.html
apps/12_langgraph_agent/advanced_rag_flows/: ingestion.py  main.py
apps/12_langgraph_agent/advanced_rag_flows/graph/: graph.py  state.py
apps/12_langgraph_agent/advanced_rag_flows/graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
apps/12_langgraph_agent/advanced_rag_flows/graph/chains/tests/: test_chains.py
apps/12_langgraph_agent/advanced_rag_flows/graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
apps/12_langgraph_agent/react_agent/: main.py  nodes.py  react.py  state.py
apps/12_langgraph_agent/reflection_agent/: chains.py  main.py
apps/13_langchain_toolkits/: README.md  index.html  playwright_basic.py  playwright_tool.py
apps/14_streamlit_azure_ai_speech/: README.md  index.html  main.py  speech_to_text.py
apps/15_streamlit_chat_slm/: README.md  chat.py  index.html  main.py  summarize.py
apps/16_whisper_transcription/: README.md  index.html  main.py
apps/1_call_azure_openai_chat/: README.md  agents_stream_iteration.py  ai_foundry.py  convert_code.py  foundry_local_app.py  index.html  main.py  query_image.py
apps/2_streamlit_chat/: README.md  index.html  main.py
apps/3_call_azure_cosmos_db/: .env.template  README.md  index.html  main.py  vector_database.py
apps/4_streamlit_chat_history/: README.md  index.html  main.py
apps/5_streamlit_query_chat_history/: README.md  index.html  main.py
apps/6_call_azure_ai_search/: 1_create_index.py  2_search_docs.py  2_search_index.py  README.md  create_index.py  datasets.py  index.html  search_index.py
apps/6_call_azure_ai_search/data/: contoso_rules.txt  test.txt
apps/7_streamlit_chat_history_rag/: README.md  main.py
apps/7_streamlit_chat_history_rag/tools/: fetch_contents.py
apps/7_streamlit_chat_rag/: README.md  index.html  main.py
apps/7_streamlit_chat_rag/tools/: fetch_contents.py
apps/8_streamlit_azure_openai_batch/: README.md  index.html  main.py
apps/99_streamlit_examples/: README.md  index.html  main.py
apps/99_streamlit_examples/pages/: 10_Object_detection.py  11_Pose_estimation.py  12_Video_processing.py  1_File_Q&A.py  2_Image_Q&A.py  2_Speech_to_text.py  3_Camera_Q&A.py  3_Image_Q&A.py  4_Translate_text.py  5_Explain_data.py  6_Speech_to_text.py  7_Create_image.py  7_Text_to_speech.py  8_Create_image.py  8_Visualize_location.py  9_Visualize_location.py
apps/99_streamlit_llm_examples/: README.md  main.py
apps/99_streamlit_llm_examples/pages/: 1_File_Q&A.py  2_Speech_to_text.py  3_Image_Q&A.py  4_Translate_text.py  5_Explain_data.py
apps/9_streamlit_azure_document_intelligence/: README.md  index.html  main.py
datasets/: contoso_rules.csv  locations.csv
docs/: README.dev.md  index.md
docs/apps/: 10_streamlit_batch_transcription.md  11_promptflow.md  12_langgraph_agent.md  13_langchain_toolkits.md  14_streamlit_azure_ai_speech.md  15_streamlit_chat_slm.md  16_whisper_transcription.md  1_call_azure_openai_chat.md  2_streamlit_chat.md  3_call_azure_cosmos_db.md  4_streamlit_chat_history.md  5_streamlit_query_chat_history.md  6_call_azure_ai_search.md  7_streamlit_chat_rag.md  8_streamlit_azure_openai_batch.md  99_streamlit_examples.md  9_streamlit_azure_document_intelligence.md
infra/: Makefile  main.bicep  main.bicepparam
infra/artifacts/: azuredeploy.json
infra/modules/: aiSearch.bicep  aiServices.bicep  cosmosDb.bicep  logAnalytics.bicep  storageAccount.bicep
search/: search_index.json
tests/: test_placeholder.py  test_smoke.py
