[tool.poetry]
name = "workshop-azure-openai"
version = "0.1.0"
description = "A GitHub template repository for a Python"
authors = ["ks6088ts <ks6088ts@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.43.1"
python-dotenv = "^1.0.1"
streamlit = "^1.38.0"
azure-cosmos = "^4.7.0"
plotly = "^5.24.1"
pandas = "^2.2.2"
langchain = "^0.2.16"
langchain-openai = "^0.1.23"
langchain-community = "^0.2.12"
azure-search-documents = "^11.5.1"
azure-identity = "^1.17.1"
ultralytics = "^8.2.102"
mediapipe = "^0.10.14"
azure-ai-documentintelligence = "^1.0.0b4"
azure-storage-blob = "^12.23.1"
requests = "^2.32.3"
opencv-python-headless = "^4.10.0.84"
promptflow = "^1.15.0"
promptflow-evals = "^0.3.2"
langgraph = "^0.2.23"
langchain-chroma = "^0.1.4"
beautifulsoup4 = "^4.12.3"
langgraph-checkpoint-sqlite = "^1.0.4"
playwright = "^1.47.0"
lxml = "^5.3.0"
nest-asyncio = "^1.6.0"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.4"
black = "^24.8.0"
pytest = "^8.3.3"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".jsonl"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["D203"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]
pythonpath = ['.']

[tool.coverage.report]
show_missing = true
