[project]
name = "workshop-azure-openai"
version = "0.1.0"
description = "A GitHub template repository for a Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.51.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.38.0",
    "azure-cosmos>=4.7.0",
    "plotly>=5.24.1",
    "pandas>=2.2.2",
    "langchain>=0.3.2",
    "langchain-openai>=0.2.2",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.1",
    "azure-search-documents>=11.5.1",
    "azure-identity>=1.18.0",
    "ultralytics>=8.3.6",
    "mediapipe>=0.10.14",
    "azure-ai-documentintelligence>=1.0.0b4",
    "azure-storage-blob>=12.23.1",
    "requests>=2.32.3",
    "opencv-python-headless>=4.10.0.84",
    "promptflow>=1.16.0",
    "promptflow-evals>=0.3.2",
    "langgraph>=0.2.23",
    "langchain-chroma>=0.1.4",
    "beautifulsoup4>=4.12.3",
    "langgraph-checkpoint-sqlite>=1.0.4",
    "playwright>=1.47.0",
    "lxml>=5.3.0",
    "nest-asyncio>=1.6.0",
    "typer>=0.12.5",
    "azure-cognitiveservices-speech>=1.40.0",
    "openai-whisper>=20240930",
    "pymupdf>=1.24.14",
    "pydantic>=2.10.2",
    "azure-ai-projects>=1.0.0b2",
    "azure-ai-inference>=1.0.0b6",
    "foundry-local-sdk>=0.3.1",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.8.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
    "black>=24.8.0",
    "mkdocs-material>=9.5.40",
]

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".jsonl"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["D203"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]
pythonpath = ['.']

[tool.coverage.report]
show_missing = true
